Added header mechanic

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -102,12 +102,10 @@ error_unsupported_shell:
   other: "You are using an unsupported shell: {{.Shell}}"
 err_output_flag_value_invalid:
   other: Could not recognize output type
-info_reactivating:
-  other: "[INFO]Reactivating state[/RESET]"
 info_deactivated:
-  other: "[INFO]Deactivated {{.Owner}}/{{.Name}}[/RESET]"
+  other: "[DISABLED]Deactivated {{.Owner}}/{{.Name}}[/RESET]"
 info_deactivated_by_commit:
-  other: "[INFO]Deactivated[/RESET]"
+  other: "[DISABLED]Deactivated[/RESET]"
 venv_installer_is_nil:
   other: Provided installer should not be nil
 error_unsupported_language:
@@ -161,9 +159,9 @@ err_artifact_no_parent:
 err_invalid_status_code:
   other: "Invalid status code: {{.V0}}"
 info_activating_state:
-  other: "[INFO]Activating state: {{.Owner}}/{{.Name}}[/RESET]"
+  other: "Activating state: {{.Owner}}/{{.Name}}"
 info_activating_state_by_commit:
-  other: "[INFO]Activating state[/RESET]"
+  other: "Activating state"
 info_state_active_repoexists:
   other: "Repo already exists: {{.Path}}"
 panic_couldnt_detect_wd:
@@ -465,7 +463,7 @@ error_state_run_undefined_name:
 error_state_run_unknown_name:
   other: The script '{{.Name}}' is not defined in activestate.yaml.
 info_state_run_activating_state:
-  other: "[INFO]This script requires an activated state. Activating it now. To bypass this set `standalone: true` on this script in your activestate.yaml.[/RESET]"
+  other: "[NOTICE]This script requires an activated state. Activating it now. To bypass this set `standalone: true` on this script in your activestate.yaml.[/RESET]"
 error_state_run_activate:
   other: Unable to activate a state for running the script in. Try manually running "state activate" first.
 error_state_run_standalone_conflict:
@@ -475,7 +473,7 @@ error_state_run_unknown_exec:
 error_state_run_setup_scriptfile:
   other: Cannot setup runnable on-disk script file.
 info_state_run_running:
-  other: "[INFO]Running user-defined script: {{.V0}}\nDefined in {{.V1}}[/RESET]"
+  other: "[NOTICE]Running user-defined script: {{.V0}}\nDefined in {{.V1}}[/RESET]"
 error_state_run_error:
   other: Failed to run script.
 error_state_run_no_shell:
@@ -749,13 +747,13 @@ err_command_requires_auth:
   other: You need to be authenticated to run this command. Authenticate by running `state auth`.
 warn_script_name_in_use:
   other: |
-    [NOTICE]The following script names are already in use:
+    The following scripts should be renamed:
 
-      - {{.V0}}
+      [DISABLED]-[/RESET] {{.V0}}
 
-    These scripts were not aliased during activation but can still be run using `state run`, eg. `state run {{.V1}}`.
+    These scripts were not aliased during activation but can still be run using `[ACTIONABLE]state run[/RESET]`, eg. `[ACTIONABLE]state run {{.V1}}[/RESET]`.
 
-    Note that you can also access scripts by prefixing their script with your project name ({{.V2}}), eg. `{{.V3}}`[/RESET]
+    Note that you can also access scripts by prefixing their script with your project name, eg. `[ACTIONABLE]{{.V2}}[/RESET]`
 
 warn_move_incompatible_modes:
   other: "Permissions of files {{.V0}} and {{.V1}} differ. Using permissions of {{.V0}}"
@@ -776,7 +774,7 @@ err_invalid_version:
 err_update_version:
   other: "Failed to automatically update your locked version schema. Please manually remove your 'version' and 'branch' fields in your activestate.yaml and substitute them for 'lock: <branch>@<version>'."
 downloading_state_version:
-  other: "[INFO]Downloading State Tool version {{.V0}}, as specified by your activestate.yaml (this only needs to happen once for each version you specify).[/RESET]"
+  other: "[NOTICE]Downloading State Tool version {{.V0}}, as specified by your activestate.yaml (this only needs to happen once for each version you specify).[/RESET]"
 forward_fail:
   other: Could not forward command to the appropriate State Tool version
 forward_fail_with_error:
@@ -785,18 +783,18 @@ forward_fail_info:
   other: The requested version of the State Tool does not exist, please ensure the version and branch are correct.
 update_available:
   other: |
-    [INFO]A new update is available!
+    [NOTICE]A new update is available!
 
     Your version: {{.V0}}
     Available Version: {{.V1}}
 
     You can update by running `state update`[/RESET]
 runtime_update_notice_known_count:
-  other: "[INFO]Your activestate.yaml is {{.V0}} commits behind.[/RESET]"
+  other: "[NOTICE]Your activestate.yaml is {{.V0}} commits behind.[/RESET]"
 runtime_update_notice_unknown_count:
-  other: "[INFO]Your activestate.yaml is behind.[/RESET]"
+  other: "[NOTICE]Your activestate.yaml is behind.[/RESET]"
 runtime_update_help:
-  other: "[INFO]Run `state pull` to pull in the latest runtime environment as defined in your project on https://platform.activestate.com/{{.V0}}/{{.V1}}[/RESET]"
+  other: "[NOTICE]Run `state pull` to pull in the latest runtime environment as defined in your project on https://platform.activestate.com/{{.V0}}/{{.V1}}[/RESET]"
 err_no_credentials:
   other: Cannot authenticate without credentials
 err_token_list:
@@ -983,7 +981,7 @@ export_config_flag_filter_description:
 export_config_dir_description:
   other: Export the config directory details
 export_apikey_user_notice:
-  other: "[INFO]Note that this key is not stored by ActiveState. Please store the value for later use as you cannot retrieve it again.[/RESET]"
+  other: "Note that this key is not stored by ActiveState. Please store the value for later use as you cannot retrieve it again."
 err_apikey_name_required:
   other: An API key name is required.
 err_cannot_obtain_apikey:
@@ -1023,9 +1021,9 @@ commit_message_add_language:
 commit_message_removed_language:
   other: "Removed language: {{.V0}} {{.V1}}"
 downloading_artifacts:
-  other: "[INFO]Downloading required artifacts[/RESET]"
+  other: "Downloading required artifacts"
 installing_artifacts:
-  other: "[INFO]Installing required artifacts[/RESET]"
+  other: "Installing required artifacts"
 fileutils_err_ammend_file:
   other: "Could not edit file: '{{.V0}}'"
 err_auth_empty_token:
@@ -1454,21 +1452,21 @@ err_order_bad_request:
 err_order_unknown:
   other: Unknown error resolving order"
 using_cached_env:
-  other: "[INFO]Reusing cached runtime environment[/RESET]"
+  other: "Reusing cached runtime environment"
 update_attempt:
   other: |
-    [INFO]Updating state tool:  Downloading latest version of the state tool...[/RESET]
+    Updating state tool:  Downloading latest version of the state tool...
 auto_update_to_version:
   other: |
-    [INFO]Updated from {{.V0}} to {{.V1}}[/RESET].
-    [INFO]To avoid auto updating run 'state update --lock' (only recommended for production environments).[/RESET]
+    Updated from [HIGHLIGHT]{{.V0}}[/RESET] to [HIGHLIGHT]{{.V1}}[/RESET].
+    To avoid auto updating run 'state update --lock' (only recommended for production environments).
 auto_update_permission_err:
   other: |
     Could not update to the latest available version of the state tool due to insufficient permissions.
     To manually update, run 'state update' as a privileged user.
     If you want the state tool to auto-update, please re-install it in a user-writable directory.
 forward_version:
-  other: "[INFO]Using locked state tool version {{.V0}}[/RESET]."
+  other: "Using locked state tool version: [HIGHLIGHT]{{.V0}}[/RESET]."
 err_project_env_file_not_exist:
   other: |
     Your activated environment appears to have been corrupted because the activestate.yaml cannot be found anymore.
@@ -1493,16 +1491,16 @@ err_deploy_run_install:
 err_deploy_path_noperm:
   other: "No permission to create symlinks on any of the PATH entries: {{.V0}}"
 deploy_install:
-  other: "[INFO]Installing Runtime Environment[/RESET]"
+  other: "Installing Runtime Environment"
 deploy_configure_shell:
-  other: "[INFO]Configuring shell: {{.V0}} (set the SHELL environment variable to use a different shell)[/RESET]"
+  other: "Configuring shell: {{.V0}}"
 deploy_symlink:
-  other: "[INFO]Symlinking executables to: {{.V0}}[/RESET]"
+  other: "Symlinking executables to: {{.V0}}"
 deploy_overwrite_target:
   other: "Overwriting existing target: {{.V0}}"
 deploy_info:
   other: |
-    [INFO]Deployment Information:[/RESET]
+    [NOTICE]Deployment Information:[/RESET]
     This information is provided for your reference, for most common use-cases you do not need to do anything with this.
 deploy_cmd_description:
   other: |
@@ -1725,8 +1723,8 @@ err_package_update_pjfile:
 prepare_protocol_warning:
   other: Could not add state protocol
 message_headless:
-  other: "[BLUE]You're currently using this tool anonymously. Sign-up for an account on the ActiveState Platform to create your own version of this project that lets you fully customize, share with a team, versioned backup, and more. Visit https://platform.activestate.com to sign up.[/RESET]"
+  other: "You're currently using this tool anonymously. Sign-up for an account on the ActiveState Platform to create your own version of this project that lets you fully customize, share with a team, versioned backup, and more. Visit https://platform.activestate.com to sign up."
 message_headless_packages:
-  other: "[BLUE]You've modified this project, and will be able to continue to do so locally. Converting your changes into a project on the ActiveState Platform can make your changes available on any machine.[/RESET]"
+  other: "You've modified this project, and will be able to continue to do so locally. Converting your changes into a project on the ActiveState Platform can make your changes available on any machine."
 message_headless_activate:
-  other: "[BLUE]Now that your project is activated -- if you ever need to add or remove packages, you can do so with `state package add`. Type `state package --help` for more info, or `state learn` for common commands.[/RESET]"
+  other: "Now that your project is activated -- if you ever need to add or remove packages, you can do so with `state package add`. Type `state package --help` for more info, or `state learn` for common commands."
