--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -583,7 +583,7 @@ secrets_get_arg_name_description:
   other: Namespace of secret is 'SCOPE.NAME'. eg. 'user.mySecret' or 'project.ourSecret'
 secrets_set_cmd_description:
   other: Set the value of a secret
-secrets_set_arg_name:
+secrets_set_arg_name_name:
   other: namespace
 secrets_set_arg_name_description:
   other: Namespace of secret is 'SCOPE.NAME. eg. 'user.mySecret' or 'project.ourSecret'
