--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1458,7 +1458,7 @@ update_attempt:
     Updating state tool:  Downloading latest version of the state tool...
 auto_update_to_version:
   other: |
-    Updated from [HIGHLIGHT]{{.V0}}[/RESET] to [HIGHLIGHT]{{.V1}}[/RESET].
+    Updated from [NOTICE]{{.V0}}[/RESET] to [NOTICE]{{.V1}}[/RESET].
     To avoid auto updating run 'state update --lock' (only recommended for production environments).
 auto_update_permission_err:
   other: |
@@ -1466,7 +1466,7 @@ auto_update_permission_err:
     To manually update, run 'state update' as a privileged user.
     If you want the state tool to auto-update, please re-install it in a user-writable directory.
 forward_version:
-  other: "Using locked state tool version: [HIGHLIGHT]{{.V0}}[/RESET]."
+  other: "Using locked state tool version: [NOTICE]{{.V0}}[/RESET]."
 err_project_env_file_not_exist:
   other: |
     Your activated environment appears to have been corrupted because the activestate.yaml cannot be found anymore.
