--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -649,6 +649,8 @@ secrets_err_base64_decoding:
   other: Error base64 decoding variable value
 secrets_err_no_publickey_found:
   other: Unable to find any public-key for User
+secrets_err_check_access:
+  other: Access check failed
 secrets_expand_err_undefined:
   other: "Secret `{{.V0}}` not defined in project"
 secrets_expand_err_not_found:
