--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1123,7 +1123,7 @@ sample_yaml_python:
       # This is the ACTIVATE event, it will run whenever a new virtual environment is created (eg. by running `state activate`)
       # On Linux and macOS this will be ran as part of your shell's rc file, so you can use it to set up aliases, functions, environment variables, etc.
       - name: ACTIVATE
-        value: python $scripts.activationMessage.path()
+        value: {{.Language}} $scripts.activationMessage.path()
 editor_yaml:
   other: |
     scripts:
