--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1599,10 +1599,7 @@ prepare_instructions_windows:
 prepare_env_warning:
   other: Could not update user environment
 prompt_headless_anonymous:
-  other: |
-    You're about to add packages as an anonymous user, you might
-    want to authenticate first using `state auth` if you already have
-    an account. Do you want to continue as an anonymous user?
+  other: You're about to add packages as an anonymous user, you might want to authenticate first using `state auth` if you already have an account. Do you want to continue as an anonymous user?
 err_package_update_pjfile:
   other: "Could not update your activestate.yaml with the new commit ID. Please run `state pull` manually."
 prepare_protocol_warning:
