--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -406,7 +406,7 @@ flag_state_run_list_description:
 error_state_run_undefined_name:
   other: The script name must be provided
 error_state_run_unknown_name:
-  other: The script '[NOTICE]{{.Name}}[/RESET]' is not defined in activestate.yaml.
+  other: The script '[NOTICE]{{.V0}}[/RESET]' is not defined in activestate.yaml.
 info_state_run_activating_state:
   other: "Setting up virtual environment. To run this script outside of a virtual environment add `[ACTIONABLE]standalone: true[/RESET]` to the script in your [NOTICE]activestate.yaml[/RESET]."
 error_state_run_activate:
