--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1107,8 +1107,6 @@ package_headless_updated:
   other: "Package updated: [NOTICE]{{.V0}}[/RESET]"
 package_headless_removed:
   other: "Package removed: [NOTICE]{{.V0}}[/RESET]"
-package_headless_project_creation:
-  other: "For additional features like sharing your runtime, version control and much more, create a project from your commit at https://platform.activestate.com/commit/{{.V0}}."
 err_package_removed:
   other: Failed to remove package
 err_packages_removed:
@@ -1571,10 +1569,7 @@ prepare_instructions_windows:
 prepare_env_warning:
   other: Could not update user environment
 prompt_headless_anonymous:
-  other: |
-    You're about to add packages as an anonymous user, you might
-    want to authenticate first using `[ACTIONABLE]state auth[/RESET]` if you already have
-    an account. Do you want to continue as an anonymous user?
+  other: You're about to add packages as an anonymous user, you might want to authenticate first using `[ACTIONABLE]state auth[/RESET]` if you already have an account. Do you want to continue as an anonymous user?
 err_package_update_pjfile:
   other: "Could not update your activestate.yaml with the new commit ID. Please run `[ACTIONABLE]state pull[/RESET]` manually."
 prepare_protocol_warning:
