--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1457,6 +1457,10 @@ auto_update_permission_err:
     Could not update to the latest available version of the state tool due to insufficient permissions.
     To manually update, run 'state update' as a privileged user.
     If you want the state tool to auto-update, please re-install it in a user-writable directory.
+auto_update_already_updating:
+  other: |
+    The State Tool is currently updating. Your command will still be run with the current version of the State Tool.
+    If you wish to run your command with the most up-to-date version of the State Tool, please wait until the update has finished.
 forward_version:
   other: "[INFO]Using locked state tool version {{.V0}}[/RESET]."
 err_project_env_file_not_exist:
